--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
-/* -------  General Styles ------- */
+/* -------  General Styles -------*/
 
 body {
   font-family: "Lato", sans-serif;
 }
 
 h2 {
-  font-size: 26px;
-  font-weight: 400;
+  font-size: 40px;
+  font-weight: 550;
   margin: 0 10px 10px 10px;
   text-align: center;
 }
 
 h3 {
   font-size: 18px;
+  font-size: 24px;
   font-weight: 500;
 }
 
@@ -25,59 +26,98 @@ section {
   padding: 20px;
 }
 
+section img {
+  margin: 15px 0;
+}
+#about p {
+  font-size: clamp(10px, 4vw, 18px);
+  font-weight: 550;
+}
+#about h2 {
+  font-size: clamp(18px, 4vw, 26px);
+}
+#ideas img {
+  margin: -5px 0;
+}
+#ideas h2 {
+  font-size: clamp(14px, 4vw, 26px);
+}
+#ideas h3 {
+  font-size: clamp(10px, 4vw, 18px);
+}
+#host ul{
+  margin: -5px;
+  justify-content: left;
+}
+#host p {
+  font-size: clamp(10px, 4vw, 18px);
+  font-weight: 500;
+}
+#host ul li {
+  font-size: clamp(10px, 4vw, 18px);
+  font-weight: 500;
+}
+#host h2 {
+  font-size: clamp(16px, 4vw, 26px);
+}
 section.alternate-background {
   background-color: #00a699;
   color: #fff;
 }
 
-img {
+main img {
   width: 100%;
-  margin-bottom: 20px;
 }
-
-/* main img {
-  width: 100px;
-} */
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  margin: 20px;
 }
 
 .item {
-  flex: 1;
+  flex-grow: 1;
   margin: 10px;
+  width: 100%;
 }
 
 .item-double {
   flex: 2;
 }
 
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+
+form .menuItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 /* -------  Navigation ------- */
+#menu .item {
+  margin: 0px;
+}
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 0 20px;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 16vw;
   color: #fff;
 }
 
-header nav {
-  display: flex;
-  justify-content: center;
+header nav ul:first-child {
+  margin-right: 30px;
 }
-
-header nav ul {
-  display: flex;
-}
-
 header nav ul li {
   list-style-type: none;
 }
@@ -85,7 +125,9 @@ header nav ul li {
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  padding: 0 20px 0 0;
+  padding: 0;
+
+  font-size: clamp(8px, 4vw, 18px);
 }
 
 header nav ul li a:hover {
@@ -93,13 +135,28 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
+#menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: center;
+  padding-bottom: 20px;
+  justify-content: space-evenly;
+}
+#menu .item {
+  margin-right: 0px;
+}
 /* -------  Search Form ------- */
+#stay h2 {
+  font-size: clamp(14px, 4vw, 26px);
+}
 form {
   border: 2px solid #ff385c;
-  padding: 10px 20px;
+  padding: 10px;
 }
 
 form label {
+  font-size: clamp(8px, 4vw, 18px);
   font-weight: bold;
 }
 
@@ -107,6 +164,7 @@ form select,
 form input {
   margin-bottom: 20px;
   width: 180px;
+  font-size: clamp(8px, 4vw, 18px);
 }
 
 form button {
@@ -128,60 +186,126 @@ footer p {
   color: #fff;
   text-align: center;
   padding: 20px;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 /* -------  Media Query ------- */
 
 @media all and (min-width: 480px) {
+  .logo {
+    font-size: 5vw;
+    align-self: center;
+    padding-bottom: 20px;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    
+  }
+  #menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-bottom: 0;
+    margin-top: 30px;
+  }
+  #menu .item {
+    margin-right: 10px;
+  }
+  header nav ul:last-child {
+    margin-right: 0;
+  }
+  header nav ul li a {
+    font-size: 2vw;
+  }
+  form .menuItem {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0 0 15px;
+  }
+  .menu button {
+    width: 15%;
+    text-align: center;
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0 0 40px 0;
+  }
+
   header {
+    text-align: left;
     display: flex;
     justify-content: space-between;
-    padding: 0 30px;
-  }
-  .logo {
-    font-size: 42px;
-    margin: px 0;
-    padding-top: 10px;
-  }
-  header nav {
-    margin-top: 5px;
   }
 
   .group {
     display: flex;
+    flex-direction: row;
+    margin: 20px;
+  }
+.item{
+  width: 50%;
+  align-self: center;
+}
+
+  #about img {
+    width: 25%;
+    margin: 10px;
+    height: 25%;
+    align-self: center;
+  }
+  main img{
+    width: 100px;
+  }
+  #about p {
+    display: flex;
+    align-self: center;
+  }
+
+  #ideas img {
+    width: 50%;
+  }
+
+  #ideas .group {
+    justify-content: space-between;
     flex-direction: column;
   }
 
-  form {
+  #ideas .group .menu {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 10px;
+    flex-wrap: nowrap;
   }
 
-  form label {
-    margin: 15px 0 0 0;
+  #ideas .group .menu div img {
+    width: 100%;
+    max-width: 1200px;
   }
 
-  form select,
-  form input {
-    width: 150px;
-  }
-
-  form button {
-    width: 20%;
-  }
-
-  .group2 {
-    display: flex;
-    align-items: center;
-  }
-  .item {
-    flex:1;
-    width:10%;
-  }
-
-  .item-double {
-    flex:2;
+  #host img {
+    width: 50%;
+    margin: 10px;
+    height: 50%;
+    align-self: center;
     
+  }
+
+  #host .group div {
+    align-self: center;
+    text-align: left;
+    justify-self: center;
+  }
+  .forest,
+  .rustic {
+    margin: 0 10px 0 0;
   }
 }
