--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
 body {
   font-family: "Lato", sans-serif;
 }
+.paragraph{
+  align-items: center
+  margin: auto 0
+}
 
 h2 {
   font-size: 26px;
@@ -31,42 +35,52 @@ section.alternate-background {
 }
 
 main img {
-  width: 100%;
+  width:100%
 }
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .item {
   flex: 1;
-  margin:10px;
+  margin: 10px;
 }
 
 .item-double {
   flex: 2;
 }
 
+.container {
+  justify-content: space-around;
+  display: flex;
+  flex-direction: column
+}
+
 /* -------  Navigation ------- */
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 0 20px;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 50px;
+  font-size: 72px;
   color: #fff;
+}
+
+header nav {
+  display: flex;
+  justify-content: center;
 }
 
 header nav ul {
   display: flex;
-  justify-content: center;
 }
 
 header nav ul li {
@@ -79,10 +93,6 @@ header nav ul li a {
   padding: 0 20px 0 0;
 }
 
-header nav ul li:last-child a {
-  margin-right: 20px;
-}
-
 header nav ul li a:hover {
   color: #bdbdbd;
   text-decoration: none;
@@ -90,22 +100,24 @@ header nav ul li a:hover {
 
 /* -------  Search Form ------- */
 form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   border: 2px solid #ff385c;
   padding: 10px;
+  flex-direction: column
 }
 
 form label {
   font-weight: bold;
 }
 
+form div {
+  display: flex;
+  justify-content: space-between;
+}
+
 form select,
 form input {
   margin-bottom: 20px;
-  width: 65%;
-  float: right;
+  width: 180px;
 }
 
 form button {
@@ -114,7 +126,7 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  width: 100%;
+  ;
 }
 
 /* -------  Footer ------- */
@@ -128,57 +140,108 @@ footer p {
   text-align: center;
   padding: 20px;
 }
-
+.grid {
+  
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+}
 /* -------  Media Query ------- */
 
-@media all and (min-width: 600px) {
+@media (min-width: 480px) {
   header {
-    background-color: #ff385c;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    padding: 0;
+  }
+  .paragraph{
+  align-items: center;
+  margin: auto 0
+}
+.p2{
+  flex: 1;
+  padding-right: 20px;
+  margin: auto 0;
+  
+}
+.picture{
+  flex: 1
+}
+
+
+
+
+.grid{
+  flex-direction:row;
+ 
+}
+.grid div{
+  width:50%
+
+}
+.grid img{
+  width:80%
+}
+  .column img{
+    width: 20%;
+    padding: 5px;
+
   }
 
-  header nav {
-    padding: 10px;
-  }
-
-  form {
+  .last{
     flex-direction: row;
+    display:flex;
+
+    
   }
 
-  .group {
+  
+
+  .button{
+    width: 100px
+  }
+
+  .column{
+    flex-direction: row;
     display: flex;
+    justify-content: space-around
+  }
+
+  .container{
     flex-direction: row;
-    justify-content: center;
-    flex-flow: row nowrap;
+    
+  }
+
+  .logo {
+    margin: 14 px 0 14px 20px;
+    padding-top: 0;
+    font-size: 38px
+  }
+
+  header nav ul {
     align-items: center;
   }
 
-  .vacation-form .item {
-    display: flex block;
-    flex: 1 1 auto;
+  .group {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:row;
+  }
+
+  form div {
     flex-direction: column;
   }
 
-  .item label
-  , .item input 
-  , .item select 
-  , .item button{
-    display: flex;
-    width: 100%
-  }
+  
 
-  .grid-column {
-    display: flex;
-    flex: 1;
-    flex-direction: column; 
-    margin: 10px;
-  }
-
-  .grid-row {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
+  form select,
+  form input {
+    margin-bottom: 0px;
   }
 }
