--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
 body {
   font-family: "Lato", sans-serif;
 }
-.paragraph{
-  align-items: center
-  margin: auto 0
-}
 
 h2 {
   font-size: 26px;
@@ -35,52 +31,42 @@ section.alternate-background {
 }
 
 main img {
-  width:100%
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .item {
   flex: 1;
-  margin: 10px;
+  margin:10px;
 }
 
 .item-double {
   flex: 2;
 }
 
-.container {
-  justify-content: space-around;
-  display: flex;
-  flex-direction: column
-}
-
 /* -------  Navigation ------- */
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 20px 20px;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 50px;
   color: #fff;
-}
-
-header nav {
-  display: flex;
-  justify-content: center;
 }
 
 header nav ul {
   display: flex;
+  justify-content: center;
 }
 
 header nav ul li {
@@ -93,6 +79,10 @@ header nav ul li a {
   padding: 0 20px 0 0;
 }
 
+header nav ul li:last-child a {
+  margin-right: 20px;
+}
+
 header nav ul li a:hover {
   color: #bdbdbd;
   text-decoration: none;
@@ -100,24 +90,22 @@ header nav ul li a:hover {
 
 /* -------  Search Form ------- */
 form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 2px solid #ff385c;
   padding: 10px;
-  flex-direction: column
 }
 
 form label {
   font-weight: bold;
 }
 
-form div {
-  display: flex;
-  justify-content: space-between;
-}
-
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
+  width: 65%;
+  float: right;
 }
 
 form button {
@@ -126,7 +114,7 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  ;
+  width: 100%;
 }
 
 /* -------  Footer ------- */
@@ -140,108 +128,59 @@ footer p {
   text-align: center;
   padding: 20px;
 }
-.grid {
-  
-  display: flex;
-  flex-wrap:wrap;
-  flex-direction: column;
-}
+
 /* -------  Media Query ------- */
 
-@media (min-width: 480px) {
+@media all and (min-width: 480px) {
   header {
+    background-color: #ff385c;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 0;
-  }
-  .paragraph{
-  align-items: center;
-  margin: auto 0
-}
-.p2{
-  flex: 1;
-  padding-right: 20px;
-  margin: auto 0;
-  
-}
-.picture{
-  flex: 1
-}
-
-
-
-
-.grid{
-  flex-direction:row;
- 
-}
-.grid div{
-  width:50%
-
-}
-.grid img{
-  width:80%
-}
-  .column img{
-    width: 20%;
-    padding: 5px;
-
   }
 
-  .last{
-    flex-direction: row;
-    display:flex;
-
-    
-  }
-
-  
-
-  .button{
-    width: 100px
-  }
-
-  .column{
-    flex-direction: row;
-    display: flex;
-    justify-content: space-around
-  }
-
-  .container{
-    flex-direction: row;
-    
-  }
-
-  .logo {
-    margin: 14 px 0 14px 20px;
-    padding-top: 0;
-    font-size: 38px
-  }
-
-  header nav ul {
-    align-items: center;
-  }
-
-  .group {
-    flex-direction: row;
-    align-items: center;
+  header nav {
+    padding: 10px;
   }
 
   form {
+    flex-direction: row;
+  }
+
+  .group {
     display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
-    flex-direction:row;
+    flex-flow: row nowrap;
+    align-items: center;
   }
 
-  form div {
+  .vacation-form .item {
+    display: flex block;
+    flex: 1 1 auto;
+    flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
   }
 
-  
+  .item label
+  , .item input 
+  , .item select 
+  , .item button{
+    display: flex;
+    width: 100%
+  }
 
-  form select,
-  form input {
-    margin-bottom: 0px;
+  .grid-column {
+    display: flex;
+    flex: 1;
+    flex-direction: column; 
+    margin: 10px;
+  }
+
+  .grid-row {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
   }
 }
